Fixed: Vertical zoom shouldn't go below zero
Fixed: Horizontal zoom works properly
    horizontal range maintained on chart reset
Fixed: Zoom in/out should have better behavior
Fixed: Charts ranges should reset on sim reset
Added ability to change weight units between metric and english
    Chart vertical range reflects this change as well.

New in 0.00.23 (5-5-2008)
Lightened caloric intake bar chart colors
Added disclaimer
Removed fat free mass percent control
Relabeled fat mass percent slider to go from "muscular" to "non", changed slider range
Added help button for heart graphic, indicates healthy BMI values
Moved BMI readout from scale to control panel
Fixed layout problem on web start (scale readouts cut off, scale units cut off)
Changed "Step button" to correspond to 1 month per press.
Changed time readout at bottom should to years instead of seconds.
Text:
    Changed kcal to Cal
    Relabeled Lipid to Fat
    Rounded all kcal/day to nearest 1
    Rounded weight to nearest 1
    Rounded age to 0.1
    Removed units from interior of stacked bar chart
Charts:
    Fixed: Horizontal graph scale should be linked
Increased speed at which scroll bars move in calorie selection panels

New in 0.00.21 (4-30-2008)
Added more junk foods
Exercises are standardized and listed in units of 1 hour each
Added bar chart total readout on top of bar chart
Renamed Fat Mass % to Body Fat %
Fixed: Can't read "protein" word on the bar chart, made text scale down
Added numeric readouts to bar chart
Improved layout of exercise and calories selection panels, so that things line up and there are no scroll bars
    Also set text to line up
    Also, items bunch up near the top when there are a small number of items

New in 0.00.20 (4-29-2008)
Removed "Restart" button from clock controls
Fixed: Sim should not be running on startup
Reduced simulation rate to 30% of previous rate
Added other base options for diet, including "none"