@@ -1,7 +1,5 @@
 High Priority:
 
-Protein bar chart text should read out even when too small to show image
-
 Crashes on mac, see email
     I use a mac-when i access the diet window the sim crashes on me..
     
